# opencode-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.ja.md  README.md  STATUS.md  TOOL_INTEGRATION.md  TUI_AGENT_IMPLEMENTATION.md  USAGE.md  test-tty.sh
.opencode/: opencode.jsonc
docs/: SLASH_COMMANDS.md  feature-comparison.md  slash-commands-implementation.md
examples/: opencode.example.jsonc
src/: auth.rs  bus.rs  config.rs  id.rs  lib.rs  main.rs  oauth.rs  permission.rs  permission_state.rs  question_state.rs  storage.rs
src/cli/: config.rs  mod.rs  prompt.rs  run.rs  serve.rs  session.rs
src/provider/: mod.rs  models.rs  models_dev.rs  parsers.rs  registry.rs  stream_types.rs  streaming.rs  types.rs
src/session/: message.rs  mod.rs  parts.rs  system.rs  types.rs
src/slash_command/: loader.rs  markdown.rs  mod.rs  parser.rs  registry.rs  template.rs
src/slash_command/builtin/: agent.rs  clear.rs  commands.rs  compact.rs  connect.rs  copy.rs  editor.rs  exit.rs  export.rs  fork.rs  help.rs  init.rs  mcp.rs  mod.rs  model.rs  redo.rs  rename.rs  review.rs  session.rs  share.rs  status.rs  theme.rs  thinking.rs  timeline.rs  undo.rs  unshare.rs
src/tool/: bash.rs  batch.rs  edit.rs  executor.rs  glob.rs  grep.rs  invalid.rs  mod.rs  model_utils.rs  question.rs  read.rs  registry.rs  todo.rs  webfetch.rs  write.rs
src/tui/: app.rs  autocomplete.rs  clipboard.rs  command_handler.rs  components.rs  dialog.rs  dialog_render.rs  input.rs  llm_streaming.rs  mod.rs  model.rs  oauth_flow.rs  state.rs  theme.rs  transcript.rs  types.rs  ui.rs
tests/: command_execution.rs  command_loading.rs  template_expansion.rs
