[package]
name = "opencode"
version = "0.1.0"
edition = "2021"
description = "AI-powered development tool - Rust implementation"
license = "MIT"
authors = ["Opencode Team"]
repository = "https://github.com/anomalyco/opencode"

[lib]
name = "opencode"
path = "src/lib.rs"

[[bin]]
name = "opencode"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.30.0", features = ["all-widgets"] }
crossterm = "0.29.0"
tui-textarea = "0.7.0"
arboard = "3.6.1"

# HTTP client for LLM APIs
reqwest = { version = "0.13.1", features = ["json", "stream", "rustls"], default-features = false }
reqwest-eventsource = "0.6.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# UUID/ID generation
ulid = "1.2.1"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# File system utilities
dirs = "6.0.0"
glob = "0.3.3"
ignore = "0.4.25"
notify = "8.2.0"

# Config parsing
jsonc-parser = "0.29.0"

# String utilities
regex = "1.12.2"
similar = "2.7.0"  # for diffs
fuzzy-matcher = "0.3.7"  # for fuzzy searching


# Shell/Process
which = "8.0.0"

# Syntax highlighting
syntect = "5.3.0"

# Random number generation
rand = "0.9.2"

# Cryptography (for PKCE)
sha2 = "0.10.9"
base64 = "0.22.1"

# URL encoding
urlencoding = "2.1.3"

# MIME type detection
mime_guess = "2.0.5"

# Markdown parsing
pulldown-cmark = "0.13.0"
yaml-rust2 = "0.11.0"

# Temp files
tempfile = "3.24.0"

# Open URLs in browser
open = "5.3.3"

[dev-dependencies]
tokio-test = "0.4.5"
pretty_assertions = "1.4.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
